Solved the layout issue in AddFeelingsPage

--- a/src/components/HeaderDashboard/HeaderDashboard.scss
+++ b/src/components/HeaderDashboard/HeaderDashboard.scss
@@ -2,4 +2,5 @@
     height: 5em;
     background-color: #cecece;
     position: fixed;
+    z-index: 100;
 }
